--- a/index.html
+++ b/index.html
@@ -59,14 +59,17 @@
         <a id="element" class="feedback show-modal" data-bs-toggle="modal" data-bs-target="#exampleModal">Enquiry Now</a>
      </div>
     <header>
-        <div class="strip-1 d-flex justify-content-end p-3 ms-auto">
+        <div class="strip-1 d-flex justify-content-end py-3 ms-auto">
            <div class="container">
                <div class="row">
                     <div class="col-lg-6 offset-lg-6">
                        <ul class="d-flex me-auto p-0 mb-0 justify-content-end contact-list">
                            <li class="list-unstyled">
-                            <i class="fa-solid fa-phone me-2"></i>
-                           <a href="tel:+918698693636">+91 8698693636</a>
+                            <div class="wa-btn">
+                              <a href="https://wa.me/918105615777" target="_blank">
+                                  <i class="fa fa-whatsapp me-2" aria-hidden="true"></i>Book Appointment
+                              </a>
+                            </div>
                            </li>
                        </ul>
                    </div>
@@ -93,6 +96,9 @@
                             <a class="nav-link" href="#faq">FAQ</a>
                           </li>
                     </ul>
+                    <a class="text-capitalize default-btn my-2 my-sm-0"  id="element" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                      Get A Quote <i class="fa-solid fa-chevron-right"></i>
+                   </a>
                 </div>
                <button class="navbar-toggler d-lg-none ms-md-2 ms-auto" type="button" data-bs-toggle="collapse"
                data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
@@ -101,9 +107,6 @@
                  <i class="fa-solid fa-bars" aria-hidden="true"></i>
                </span>
              </button>
-                <a class="text-capitalize default-btn my-2 my-sm-0"  id="element" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                   Get A Quote <i class="fa-solid fa-chevron-right"></i>
-                </a>
             </div>
         </nav>
    </header>
@@ -111,14 +114,14 @@
         <section class="banner">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-8">
+                    <div class="col-lg-6">
                         <div class="title">
                             <h2><em>“CAN?”</em> Now Transformed Into <em>“Genesis”</em> of Hope</h2>
                             <h6 class="mt-3">Offering Hope to All</h6>
                         </div>
                     </div>
-                    <div class="col-lg-4">
-                        <div class="banner-form">
+                    <div class="col-lg-6">
+                        <!-- <div class="banner-form">
                             <form method="post" action="https://form.digitalsochmedia.com/thankub.php">
                             <div class="form-group" style="margin-bottom: 0px;">
                                <input type="text" name="name" class="form-control" id="form_name_2" placeholder="Enter Your Name" style="margin-bottom: 15px;"  required="required">
@@ -130,6 +133,48 @@
                                 <button type="submit" class="wa-btn btn btn-primary"><span class="fa fa-paper-plane" aria-hidden="true"></span> Submit</button>
                             </div>
                          </form>
+                        </div> -->
+                        <div class="d-flex flex-wrap justify-content-center">
+                          <div class="card">
+                            <div class="image-wrapper">
+                              <img src="assets/images/immunotherapy.webp" alt="" class="img-fluid">
+                            </div>
+                            <div class="card-body">
+                              <h6>Advanced Immunotherapy</h6>
+                            </div>
+                          </div>
+                          <div class="card">
+                            <div class="image-wrapper">
+                              <img src="assets/images/fda.webp" alt="" class="img-fluid">
+                            </div>
+                            <div class="card-body">
+                              <h6>FDA-Approved Therapy</h6>
+                            </div>
+                          </div>
+                          <div class="card">
+                            <div class="image-wrapper">
+                              <img src="assets/images/success_rate.webp" alt="" class="img-fluid">
+                            </div>
+                            <div class="card-body">
+                              <h6>High Success Rate</h6>
+                            </div>
+                          </div>
+                          <div class="card">
+                            <div class="image-wrapper">
+                              <img src="assets/images/long_lasting.webp" alt="" class="img-fluid">
+                            </div>
+                            <div class="card-body">
+                              <h6>Long-Lasting Remission</h6>
+                            </div>
+                          </div>
+                          <div class="card">
+                            <div class="image-wrapper">
+                              <img src="assets/images/personalized.webp" alt="" class="img-fluid">
+                            </div>
+                            <div class="card-body">
+                              <h6>Personalized Cancer Treatment</h6>
+                            </div>
+                          </div>
                         </div>
                     </div>
                 </div>
@@ -249,6 +294,117 @@
                 </div>
               </div>
           </div>
+      </section>
+      <section class="doctors">
+        <div class="container">
+          <div class="title">
+            <h5>Meet Our Experts</h5>
+        </div>
+          <div class="row">
+            <div class="col-lg-4">
+              <div class="card">
+                <div class="image-wrapper">
+                  <img src="assets/images/dr_jose.png" alt="" class="img-fluid">
+                </div>
+                <div class="card-body">
+                  <h6>Dr. Jose M Easow</h6>
+                  <p>Hematology and Bone Marrow Transplantation</p>
+                  <span>30+ Years Experience</span>
+                </div>
+                <div class="wa-btn">
+                  <a href="https://wa.me/918105615777" target="_blank">
+                      <i class="fa fa-whatsapp me-2" aria-hidden="true"></i>Chat With Us
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="card">
+                <div class="image-wrapper">
+                  <img src="assets/images/dr_ganpati_bhat.jpg" alt="" class="img-fluid">
+                </div>
+                <div class="card-body">
+                  <h6>Dr. Ganapathi M. Bhat</h6>
+                  <p>Medical Oncology</p>
+                  <span>25+ Years Experience</span>
+                </div>
+                <div class="wa-btn">
+                  <a href="https://wa.me/918105615777" target="_blank">
+                      <i class="fa fa-whatsapp me-2" aria-hidden="true"></i>Chat With Us
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="card">
+                <div class="image-wrapper">
+                  <img src="assets/images/dr-revathi-raj.jpg" alt="" class="img-fluid">
+                </div>
+                <div class="card-body">
+                  <h6>Dr. Revathi Raj</h6>
+                  <p>Paediatric Haematology Oncology</p>
+                  <span>24+ Years Experience</span>
+                </div>
+                <div class="wa-btn">
+                  <a href="https://wa.me/918105615777" target="_blank">
+                      <i class="fa fa-whatsapp me-2" aria-hidden="true"></i>Chat With Us
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="card">
+                <div class="image-wrapper">
+                  <img src="assets/images/dr_vijay_patil.png" alt="" class="img-fluid">
+                </div>
+                <div class="card-body">
+                  <h6>Dr. Vijay Patil</h6>
+                  <p>Medical Oncology</p>
+                  <span>16+ Years Experience</span>
+                </div>
+                <div class="wa-btn">
+                  <a href="https://wa.me/918105615777" target="_blank">
+                      <i class="fa fa-whatsapp me-2" aria-hidden="true"></i>Chat With Us
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="card">
+                <div class="image-wrapper">
+                  <img src="assets/images/rahul_bharagava.jpg" alt="" class="img-fluid">
+                </div>
+                <div class="card-body">
+                  <h6>Dr. Rahul Bhargav</h6>
+                  <p>Hematology</p>
+                  <span>15+ Years Experience</span>
+                </div>
+                <div class="wa-btn">
+                  <a href="https://wa.me/918105615777" target="_blank">
+                      <i class="fa fa-whatsapp me-2" aria-hidden="true"></i>Chat With Us
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="card">
+                <div class="image-wrapper">
+                  <img src="assets/images/dr_subhraprakash.jpg" alt="" class="img-fluid">
+                </div>
+                <div class="card-body">
+                  <h6>Dr. Subhraprakash Sanyal</h6>
+                  <p>Hematology</p>
+                  <span>14+ Years Experience</span>
+                </div>
+                <div class="wa-btn">
+                  <a href="https://wa.me/918105615777" target="_blank">
+                      <i class="fa fa-whatsapp me-2" aria-hidden="true"></i>Chat With Us
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
       <section class="cart-banner" id="why">
         <div class="container">
